# termgreet

./: Cargo.toml  README.md
assets/: termgreet_logo.psd
examples/: config.toml  motd.toml
src/: config.rs  display.rs  kitty_graphics.rs  main.rs  system_info.rs
