[package]
name = "termgreet"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
sysinfo = "0.30"
colored = "2.0"
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"
image = "0.24"
anyhow = "1.0"
base64 = "0.21"
unicode-width = "0.2.1"
rayon = "1.8"
